# cargo-fancy

./: Cargo.toml  README.md
src/: main.rs
