[package]
name = "cargo-fancy"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["cargo", "subcommand"]
repository = "https://github.com/alexcrichton/cargo-fancy"
homepage = "https://github.com/alexcrichton/cargo-fancy"
description = """
Fancy output for Cargo as a subcommand.
"""

[dependencies]
term = "0.4"
